# quick_surf

./: Cargo.toml  README.md
src/: desktop.rs  lib.rs  web.rs
