[package]
name = "quick_surf"
version = "0.1.0"
authors = ["lenscas <lenscas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
surf = {version="= 2.0.0-alpha.0"}
http-client = { version = "*", features = ["native_client"] }
[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb={version="*",features = ["experimental_features_which_may_break_on_minor_version_bumps"]}

[dependencies]
serde = "*"
serde_json = "*"
